# kiro-gateway

./: .gitignore  Dockerfile  Dockerfile.debug  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
kiro/: auth.py  routes_anthropic.py  routes_openai.py
security/: FAQ.md  GATEWAY_SCOPE.md  SECURITY_AUDIT.md  TOS_ANALYSIS.md
tests/: conftest.py
tests/unit/: test_auth_manager.py  test_routes_anthropic.py
